@@ -8,4 +8,4 @@
 * IO
 * Garbage collected symbols
 * REPL not requiring readline
-* Stack trace for exceptions (by constructing linked list in thread_info)
+* Handling of already returned continuations
